--- a/ford-car/css/animation.css
+++ b/ford-car/css/animation.css
@@ -80,25 +80,18 @@
    0% {
       background-color: rgba(149, 149, 149, 0);
       border-bottom: 1px solid rgba(18, 18, 18, 0);
-      box-shadow: 0px 1px 3px 0px inset #45454500;
+      box-shadow: 0px 1px 3px 0px inset rgba(69, 69, 69, 0);
       transform: rotate(360deg);
    }
    25% {
       background-color: rgba(149, 149, 149, 0.5);
-      border-bottom: 1px solid rgba(18, 18, 18, 0);
-      box-shadow: 0px 1px 3px 0px inset #45454500;
-      transform: rotate(360deg);
    }
    50% {
-      background-color: rgba(149, 149, 149, 0.5);
       border-bottom: 1px solid #121212;
       box-shadow: 0px 1px 3px 0px inset #454545;
-      transform: rotate(360deg);
    }
    100% {
       background-color: rgba(27, 26, 26, 1);
-      border-bottom: 1px solid #121212;
-      box-shadow: 0px 1px 3px 0px inset #454545;
       transform: rotate(349deg);
    }
 }
@@ -229,13 +222,11 @@
 /*
   decor__outline:before 0.5s  
 */
-@keyframes appearance-decor-line {
+@keyframes width-decor-line {
    0% {
-      opacity: 0;
       width: 0px;
    }
    100% {
-      opacity: 1;
       width: 20px;
    }
 }
@@ -258,17 +249,16 @@
 @keyframes draw-headlight {
    0% {
       top: 59px;
-      left: 15px;
       height: 0px;
       border-right: 0px solid rgb(34, 34, 34);
    }
    5% {
-      top: 59px;
-      left: 15px;
-      height: 0px;
       border-right: 2px solid rgb(34, 34, 34);
    }
    100% {
+      top: 24px;
+      height: 35px;
+      border-right: 2px solid rgb(34, 34, 34);
    }
 }
 
@@ -283,21 +273,6 @@
    100% {
       left: 34px;
       width: 10px;
-   }
-}
-
-/* 
-   position-bumper-after - 0.5s
-*/
-@keyframes width-bumper-after {
-   0% {
-      width: 0px;
-   }
-   50% {
-      width: 0px;
-   }
-   100% {
-      width: 2px;
    }
 }
 
@@ -332,17 +307,10 @@
 */
 @keyframes appearance-small-lamp {
    0% {
-      opacity: 0;
       transform: scale(0.8);
       box-shadow: 0px 0px 2px 1px inset #303030, 0px 0px 0px 1px rgba(255, 255, 255, 0);
    }
-   50% {
-      opacity: 1;
-      transform: scale(1);
-      box-shadow: 0px 0px 2px 1px inset #303030, 0px 0px 0px 1px rgba(48, 48, 48, 0);
-   }
    100% {
-      opacity: 1;
       transform: scale(1);
       box-shadow: 0px 0px 2px 1px inset #303030, 0px 0px 0px 1px #303030;
    }
@@ -354,9 +322,6 @@
 @keyframes translate-x-half-scale {
    0% {
       transform: translateX(-50%) scale(0);
-   }
-   70% {
-      transform: translateX(-50%) scale(1);
    }
    100% {
       transform: translateX(-50%) scale(1);
@@ -376,7 +341,6 @@
       box-shadow: 0px 0px 4px 1px inset rgb(252, 168, 2);
    }
    100% {
-      transform: translate(-50%, -50%) scale(1);
       box-shadow: 0px 0px 4px 7px inset rgb(252, 168, 2);
    }
 }
@@ -397,6 +361,8 @@
 
 /* 
    line  500ms
+   якщо вказати transform на 50%,
+   але не вказати transform на 100% анімація краща
 */
 @keyframes transform-line {
    0% {
@@ -404,15 +370,16 @@
       transform: translate(-50%, -50%) rotate(0);
    }
 
-   30% {
+   50% {
       height: 72px;
       transform: translate(-50%, -50%) rotate(0);
    }
+
    100% {
-      height: 72px;
-      transform: translate(-50%, -50%) rotate(180);
+      /* transform: translate(-50%, -50%) rotate(90deg); */
    }
 }
+
 /* 
    .line:before,
    .line:after
@@ -470,7 +437,6 @@
       height: 1px;
    }
    100% {
-      width: 185px;
       height: 110px;
    }
 }
@@ -487,9 +453,6 @@
       opacity: 0;
    }
    5% {
-      top: -4px;
-      left: 298px;
-      transform: rotate(-8deg);
       opacity: 1;
    }
 
@@ -497,7 +460,6 @@
       top: 10px;
       left: 300px;
       transform: rotate(0deg);
-      opacity: 1;
    }
 }
 
