--- a/ford-car/css/reset.css
+++ b/ford-car/css/reset.css
@@ -48,6 +48,11 @@ textarea {
    line-height: inherit;
 }
 
+a,
+button {
+   cursor: pointer;
+}
+
 button {
    color: inherit;
    background-color: transparent;
