--- a/ford-car/css/animation.css
+++ b/ford-car/css/animation.css
@@ -5,9 +5,24 @@
    4. Door - 3s
    5.other details - 2.5s
    6.light - 2s
-   7.other details - 3s
+   7.decor - 3s
 
 */
+
+/*
+   neon 0.5s 
+*/
+@keyframes pulse {
+   0% {
+      transform: scale(1);
+   }
+   50% {
+      transform: scale(1.05);
+   }
+   100% {
+      transform: scale(1);
+   }
+}
 
 /*
    neon 0.5s 
