--- a/ford-car/css/style.css
+++ b/ford-car/css/style.css
@@ -41,7 +41,7 @@ body {
    align-items: center;
    justify-content: flex-end;
    flex-direction: column;
-   gap: 50px;
+   row-gap: 50px;
 }
 
 .car {
@@ -343,11 +343,11 @@ body {
    flex: 0 0 215px;
 }
 .decor__center {
-   flex: 0 0 auto;
+   flex: 1 0 auto;
 }
 
 .decor__end {
-   flex: 1 0 auto;
+   flex: 0 0 auto;
 }
 
 .decor__outline {
@@ -582,7 +582,7 @@ body {
 .decor__shadow-center {
    position: absolute;
    top: -12px;
-   right: 17px;
+   right: 42px;
    width: 189px;
    height: 13px;
    overflow: hidden;
@@ -1060,7 +1060,7 @@ body {
    display: flex;
    align-items: center;
    justify-content: center;
-   gap: 30px;
+   column-gap: 30px;
 }
 
 .indicator__item {
