--- a/lesson-15/css/reset.css
+++ b/lesson-15/css/reset.css
@@ -34,6 +34,16 @@ a {
    text-decoration: none;
 }
 
+a,
+button {
+   cursor: pointer;
+}
+
+button {
+   color: inherit;
+   background-color: transparent;
+}
+
 img {
    vertical-align: top;
 }
